--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
                         <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
                         <li class="nav__item"><a href="#work" class="nav__link">Work</a></li>
-                        <li class="nav__item"><a href="../portfolio-responsive-complete-master/contactus.html" class="nav__link">Contact</a></li>
+                        <li class="nav__item"><a href="../sample/contactus.html" class="nav__link">Contact</a></li>
                     </ul>
                 </div>
 
@@ -42,7 +42,7 @@
                 <div class="home__data">
                     <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Akash</span><br> Web Designer</h1>
 
-                    <a href="#" class="btn left"><b>Contact</b></a>
+                    <a href="../sample/contactus.html" class="btn left"><b>Contact</b></a>
                 </div>
 
                 <div class="home__social">
@@ -174,7 +174,7 @@
                         <input type="text" placeholder="Name" class="contact__input">
                         <input type="mail" placeholder="Email" class="contact__input">
                         <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
-                        <input type="btn left" value="Submit" class="contact__button button">
+                        <button class="glow-on-hover" type="button">Submit</button>
                     </form>
                 </div>
             </section>
